add GTA e Casemito

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div>
                 <img 
                 src="https://github.com/matheuusmendess.png" 
-                alt="Foto de Matheus mendes em um lago" />
+                alt="Foto de Matheus mendes em sua mesa de ecritorio programando" />
             </div>
         </header>
     
@@ -56,6 +56,14 @@
                             </a>
                         </li>
 
+                        <li>
+                            <a 
+                            target="_blank"
+                            href="https://www.twitch.tv/directory/game/Grand%20Theft%20Auto%20V">
+                               <img src="https://static-cdn.jtvnw.net/ttv-boxart/32982_IGDB-188x250.jpg" alt="Imagem do jogo GTA "> 
+                            </a>
+                        </li>
+
 
                     </ul>
                 </div>
@@ -88,6 +96,14 @@
                             target="_blank"
                             href="https://www.twitch.tv/sidaodogame">
                                <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/dc25012e-5097-4a14-8898-10a69b1351d4-profile_image-150x150.png" alt="Imagem do Sidão do Game"> 
+                            </a>
+                        </li>
+
+                        <li>
+                            <a 
+                            target="_blank"
+                            href="https://www.twitch.tv/casimito">
+                               <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/32805a78-d927-48bd-8089-bf5efed53ea4-profile_image-70x70.png" alt="Imagem do Casemito "> 
                             </a>
                         </li>
 
